organización del codigo para mejor visualización

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/b_.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flowento</title>
-    <meta name="description" content="Aplicación Flowento en construcción">
+    <meta name="description" content="Aplicación Flowento en construcción" />
   </head>
   <body>
     <div id="root"></div>
